Bug 848292 - Rules for shared folders are too low in the theme source. r=richard.marti

--- a/mail/themes/gnomestripe/mail/folderPane.css
+++ b/mail/themes/gnomestripe/mail/folderPane.css
@@ -19,6 +19,10 @@ treechildren::-moz-tree-image(folderNameCol) {
   -moz-margin-end: 2px;
 }
 
+/* ..... Shared folders .....
+treechildren::-moz-tree-image(folderNameCol, imapShared-true) {
+} */
+
 treechildren::-moz-tree-image(folderNameCol, newMessages-true) {
   list-style-image: url("moz-icon://stock/gtk-directory?size=menu");
 }
